# ai_kimdayeon

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json
server/: .dockerignore  .gitignore  Dockerfile  config.js  index.js  package.json
server/routes/: claudeRoutes.js  confluenceRoutes.js  slackPreview.js  video.js
server/video_processing_scripts/: burnvideo  credentials.json  pyproject.toml  token.pickle
server/video_processing_scripts/app/: batch_subtitle_burner.py  main.py  notice_to_slack.py  transcriber_cli.py  writepage.py
server/video_processing_scripts/app/commons/: transcriber.py
src/: index.tsx
src/api/: claudeApi.ts  confluenceApi.ts  slackApi.ts
src/components/: UploadButton.tsx
src/hooks/: useManualSlackPreview.ts  useSlackPreview.ts  useSlackSender.ts  useTodaySlackPreview.ts  useWikiUpload.ts
src/pages/: HomePage.tsx
src/store/: useAppStore.ts
src/utils/: helpers.ts
video-automator/: README.md  transcribe
video-automator/app/: __init__.py  drive_uploader.py  subtitle_burner.py
